<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherFragment">

    <TextView
        android:id="@+id/tvCityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_24"
        android:gravity="center"
        android:text="@string/istanbul"
        android:textColor="@color/transparent_purple"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llContainer"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_transparent_purple"
        app:layout_constraintBottom_toBottomOf="@id/secondGuideline"
        app:layout_constraintTop_toTopOf="@id/llContainer" />

    <TextView
        android:id="@+id/tvCurrentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_transparent_white"
        android:padding="@dimen/dimen_4"
        android:text="@string/monday_16_july"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/llContainer" />

    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="@dimen/dimen_200"
        android:layout_height="@dimen/dimen_200"
        android:layout_marginVertical="@dimen/dimen_30"
        android:background="@drawable/bg_rounded_weather"
        android:elevation="-16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dimen_20"
        app:layout_constraintBottom_toTopOf="@id/firstGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvCityName">

        <TextView
            android:id="@+id/tvWeatherType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partly_rainy_sunny"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dimen_8"
            android:text="@string/_25"
            android:textColor="@color/white"
            android:textSize="64sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivWeatherType"
        android:layout_width="@dimen/dimen_150"
        android:layout_height="@dimen/dimen_150"
        android:src="@drawable/sunny_rainy_cloudy"
        app:layout_constraintBottom_toBottomOf="@id/firstGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/firstGuideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        app:cardCornerRadius="@dimen/dimen_16"
        app:layout_constraintBottom_toTopOf="@id/secondGuideline"
        app:layout_constraintTop_toBottomOf="@id/firstGuideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_20"
            android:weightSum="3">

            <TextView
                android:id="@+id/tvWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_9_km_h"
                app:drawableTopCompat="@drawable/ic_wind" />

            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_30"
                app:drawableTopCompat="@drawable/ic_humidity" />

            <TextView
                android:id="@+id/tvVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:text="@string/_1_4_km"
                app:drawableTopCompat="@drawable/ic_visibility" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/secondGuideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/tvToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:textColor="@color/transparent_purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/rvTodayWeather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondGuideline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTodayWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvToday"
        tools:listitem="@layout/item_weather_today" />

</androidx.constraintlayout.widget.ConstraintLayout>

